--- a/custom css/style.css
+++ b/custom css/style.css
@@ -6,18 +6,20 @@ body {
   margin: 0px;
   padding: 0px;
 }
-.navbar{
-    background-color:rgba(1, 1, 72, 0.651);
+.navbar {
+  background-color: rgba(140, 140, 140, 0.759);
 }
 .navbar-brand img {
   width: 100px;
   height: 80px;
 }
 .nav-item {
-  margin: 20px;
+  margin: 15px;
+  font-weight: 450;
+  font-size: 18px;
 }
 .nav-link {
-  color: yellowgreen;
+  color: rgb(164, 246, 0);
 }
 .nav-link:hover {
   color: white;
@@ -30,11 +32,16 @@ body {
   height: 15px;
   border-radius: 50%;
   color: brown;
+  background-color: red;
 }
-.section-title h2{
-    font-size: 50px;
-    letter-spacing: 6px;
-    color: yellowgreen;
+.custom-indicators [data-bs-target] {
+  position: relative;
+  top: 20px;
+}
+.section-title h2 {
+  font-size: 50px;
+  letter-spacing: 6px;
+  color: yellowgreen;
 }
 .section-title p {
   width: 700px;
@@ -53,7 +60,54 @@ body {
   font-family: "Courier New", Courier, monospace;
   font-weight: 900;
 }
-.welcome-img img{
-    width: 100%;
-    height: 420px;
+.display-3 {
+  font-weight: bold;
+}
+.welcome-img img {
+  width: 100%;
+  height: 420px;
+}
+.box {
+  background-color: rgb(54, 52, 52);
+  color: white;
+  padding: 20px 15px;
+  display: flex;
+  align-items: center;
+  margin: 10px;
+}
+.img-box {
+  width: 175px;
+  height: 175px;
+  min-width: 175pxs;
+  border-radius: 50%;
+  border: 5px solid yellowgreen;
+  overflow: hidden;
+  margin: 50px;
+}
+.img-box img {
+  width: 175px;
+  height: 175px;
+  border-radius: 50%;
+}
+.card img {
+  height: 150px;
+}
+.bolg-card {
+  margin: 26px;
+  border-radius: 20px;
+}
+.reserved {
+  width: 100%;
+  height: 450px;
+}
+.reserv-form input {
+  padding: 15px;
+  margin: 5px 0px;
+}
+.contact-Us a {
+  text-decoration: none;
+  color: gold;
+}
+.text-area {
+  height: 93px;
 }
